[gd_scene load_steps=2 format=3 uid="uid://bvrh8ipf7ssp3"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_4dhxn"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_4dhxn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="LogoLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "3cskdee"

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 64
alignment = 1

[node name="MultiLocal" type="Button" parent="HBoxContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
theme_override_font_sizes/font_size = 64
text = "Race"

[node name="Options" type="Button" parent="HBoxContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MultiLocal")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../MultiLocal")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_previous = NodePath("../Options")
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="Versions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer/Versions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
vertical_alignment = 1

[node name="GodotVersion" type="Label" parent="HBoxContainer/VBoxContainer/Versions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionsMenu" type="Control" parent="HBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer/OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -149.0
offset_right = 479.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/v_separation = 32
columns = 2

[node name="FullscreenLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Fullscreen"

[node name="Fullscreen" type="CheckButton" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../../DoneOptions")
focus_neighbor_bottom = NodePath("../Separation")
focus_next = NodePath("../Separation")
focus_previous = NodePath("../../DoneOptions")

[node name="SeparationLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Separation pixels"

[node name="Separation" type="HSlider" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Fullscreen")
focus_neighbor_bottom = NodePath("../Vibration")
focus_next = NodePath("../Vibration")
focus_previous = NodePath("../Fullscreen")

[node name="VibrationLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Vibration
"

[node name="Vibration" type="CheckButton" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_top = NodePath("../Separation")
focus_neighbor_bottom = NodePath("../VibrationForce")
focus_next = NodePath("../VibrationForce")
focus_previous = NodePath("../Separation")

[node name="VibrationForceLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Vibration force"

[node name="VibrationForce" type="HSlider" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Vibration")
focus_neighbor_bottom = NodePath("../PlayMusic")
focus_next = NodePath("../PlayMusic")
focus_previous = NodePath("../Vibration")

[node name="PlayMusicLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="PlayMusic" type="CheckButton" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../VibrationForce")
focus_neighbor_bottom = NodePath("../MasterVolume")
focus_next = NodePath("../MasterVolume")
focus_previous = NodePath("../VibrationForce")
alignment = 2

[node name="MasterVolumeLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolume" type="HSlider" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../PlayMusic")
focus_neighbor_bottom = NodePath("../MusicVolume")
focus_next = NodePath("../MusicVolume")
focus_previous = NodePath("../PlayMusic")

[node name="MusicVolumeLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../MasterVolume")
focus_neighbor_bottom = NodePath("../SFXVolume")
focus_next = NodePath("../SFXVolume")
focus_previous = NodePath("../MasterVolume")

[node name="SoundFXVolumeLabel" type="Label" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="HSlider" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../MusicVolume")
focus_neighbor_bottom = NodePath("../../DoneOptions")
focus_next = NodePath("../../DoneOptions")
focus_previous = NodePath("../MusicVolume")

[node name="DoneOptions" type="Button" parent="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_top = NodePath("../GridContainer/SFXVolume")
focus_neighbor_bottom = NodePath("../GridContainer/Fullscreen")
focus_next = NodePath("../GridContainer/Fullscreen")
focus_previous = NodePath("../GridContainer/SFXVolume")
theme_override_font_sizes/font_size = 32
text = "Done"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Buttons/MultiLocal" to="." method="_on_multi_local_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/Separation" to="." method="_on_separation_value_changed"]
[connection signal="toggled" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/Vibration" to="." method="_on_vibration_toggled"]
[connection signal="value_changed" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/VibrationForce" to="." method="_on_vibration_force_value_changed"]
[connection signal="toggled" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/PlayMusic" to="." method="_on_play_music_toggled"]
[connection signal="value_changed" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/GridContainer/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/OptionsMenu/VBoxContainer/DoneOptions" to="." method="_on_done_pressed"]
